force-app/main/default/objects/Dental_Lab_Qualifying_Questions__c/Dental_Lab_Qualifying_Questions__c.object-meta.xml
<CustomObject>
    <description>Questionnaire for Dental users that will allow them to answer questions about their work in the CAD/CAM Restoration space.</description>
    <label>Dental Lab Qualifying Questions</label>
    <nameField>
        <displayFormat>DN-{00000000}</displayFormat>
        <label>Dental Lab Qualifying Questions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dental Lab Qualifying Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>