force-app/main/default/objects/Dental_Lab_Qualifying_Questions__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look up to Account</description>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>DN-CA-Account_Record_Type</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Dental Lab Qualifying Questions</relationshipLabel>
    <relationshipName>Dental_Lab_Qualifying_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>