force-app/main/default/objects/Dental_Lab_Qualifying_Questions__c/fields/Are_you__c.field-meta.xml
<CustomField>
    <fullName>Are_you__c</fullName>
    <description>Regarding your work in the CAD/CAM Restoration space</description>
    <label>Are you</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FULLY CAD/CAM OUTSOURCING (Sending scanning and milling work out)</fullName>
            </value>
            <value>
                <fullName>PARTIALLY CAD/CAM OUTSOURCING (Have scanner-sending milling work out)</fullName>
            </value>
            <value>
                <fullName>FULLY IN-HOUSE CAD/CAM OPERATIONAL (Have scanner &amp; milling facility)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>