force-app/main/default/objects/Dental_Lab_Qualifying_Questions__c/fields/Dental_lab_size__c.field-meta.xml
<CustomField>
    <fullName>Dental_lab_size__c</fullName>
    <description>What is your Dental lab size?</description>
    <label>Dental lab size</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 Employee</fullName>
            </value>
            <value>
                <fullName>2-4 Employees</fullName>
            </value>
            <value>
                <fullName>5-9 Employees</fullName>
            </value>
            <value>
                <fullName>10-19 Employees</fullName>
            </value>
            <value>
                <fullName>20 or more Employees</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>