force-app/main/default/objects/Dental_Lab_Qualifying_Questions__c/fields/Implant_Single_Units__c.field-meta.xml
<CustomField>
    <fullName>Implant_Single_Units__c</fullName>
    <description>How many CAD/CAM units do you bill out per month?</description>
    <label>Implant Single Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>