force-app/main/default/objects/Dental_Lab_Qualifying_Questions__c/fields/Increase_in_the_next_12_months__c.field-meta.xml
<CustomField>
    <fullName>Increase_in_the_next_12_months__c</fullName>
    <description>Do you anticipate an increase in the next 12 months?</description>
    <label>Increase in the next 12 months</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Scan Volume</fullName>
            </value>
            <value>
                <fullName>Milling Volume</fullName>
            </value>
            <value>
                <fullName>Both Scan &amp; Milling Volume</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>