force-app/main/default/objects/Dental_Lab_Qualifying_Questions__c/fields/Materials_used_for_Milled_Products__c.field-meta.xml
<CustomField>
    <fullName>Materials_used_for_Milled_Products__c</fullName>
    <description>What Materials do you use for Milled Products?</description>
    <label>Materials used for Milled Products</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TI Only</fullName>
            </value>
            <value>
                <fullName>TI &amp; Zirconia</fullName>
            </value>
            <value>
                <fullName>TI &amp; Zirconia &amp; Cobalt Chrome</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>