force-app/main/default/objects/Dental_Lab_Qualifying_Questions__c/fields/Natural_Tooth_Supported_Bridges_units__c.field-meta.xml
<CustomField>
    <fullName>Natural_Tooth_Supported_Bridges_units__c</fullName>
    <description>How many CAD/CAM units do you bill out per month?</description>
    <label>Natural Tooth Supported Bridges units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>