force-app/main/default/objects/Dental_Lab_Qualifying_Questions__c/fields/Other_comments__c.field-meta.xml
<CustomField>
    <fullName>Other_comments__c</fullName>
    <description>Comments</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Other comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>