force-app/main/default/objects/Dental_Lab_Qualifying_Questions__c/fields/Primary_Milling_System__c.field-meta.xml
<CustomField>
    <fullName>Primary_Milling_System__c</fullName>
    <description>What Primary Milling System is utilized currently?</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Milling System</label>
    <length>18</length>
    <type>Text</type>
</CustomField>