force-app/main/default/objects/Dental_Lab_Qualifying_Questions__c/fields/Primary_Milling_System_used_currently__c.field-meta.xml
<CustomField>
    <fullName>Primary_Milling_System_used_currently__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Milling System used currently?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>