force-app/main/default/objects/Dental_Lab_Qualifying_Questions__c/fields/Primary_Scanner__c.field-meta.xml
<CustomField>
    <fullName>Primary_Scanner__c</fullName>
    <description>What Primary Scanner is utilized currently?</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Scanner</label>
    <length>18</length>
    <type>Text</type>
</CustomField>