force-app/main/default/objects/Dental_Lab_Qualifying_Questions__c/fields/Primary_Scanner_utilized_currently__c.field-meta.xml
<CustomField>
    <fullName>Primary_Scanner_utilized_currently__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Scanner utilized currently?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>