force-app/main/default/objects/Dental_Lab_Qualifying_Questions__c/fields/Purchase_of_scan_equipment__c.field-meta.xml
<CustomField>
    <fullName>Purchase_of_scan_equipment__c</fullName>
    <description>Most important consideration in the purchase of scan equipment</description>
    <inlineHelpText>Select one attribute that you believe is the most important consideration in the purchase of scan equipment.</inlineHelpText>
    <label>Purchase of scan equipment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lowest possible initial cost/outlay</fullName>
            </value>
            <value>
                <fullName>Lowest possible ongoing cost of ownership (cost per milled part produced)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>