force-app/main/default/objects/Dental_Lab_Qualifying_Questions__c/validationRules/Primary_Milling_System_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Primary_Milling_System_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL(Are_you__c , &quot;FULLY IN-HOUSE CAD/CAM OPERATIONAL (Have scanner &amp; milling facility)&quot;), Primary_Milling_System__c =&quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Primary_Milling_System__c</errorDisplayField>
    <errorMessage>Primary Milling System field should not be blank as your work is &apos;FULLY IN HOUSE operation&apos;.</errorMessage>
</ValidationRule>