force-app/main/default/objects/Dental_Lab_Qualifying_Questions__c/validationRules/Primary_Milling_System_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Primary_Milling_System_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR
(ISPICKVAL(Are_you__c , &quot;FULLY CAD/CAM OUTSOURCING (Sending scanning and milling work out)&quot;),
ISPICKVAL(Are_you__c , &quot;PARTIALLY CAD/CAM OUTSOURCING (Have scanner-sending milling work out)&quot; )),
NOT(Primary_Milling_System__c=&quot;&quot;))</errorConditionFormula>
    <errorDisplayField>Primary_Milling_System__c</errorDisplayField>
    <errorMessage>Primary Milling System field should be blank as your work is not &apos;FULLY IN HOUSE operation&apos;.</errorMessage>
</ValidationRule>