force-app/main/default/objects/Dental_Lab_Qualifying_Questions__c/validationRules/Primary_Scanner_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Primary_Scanner_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR
(ISPICKVAL( Are_you__c , &quot;FULLY IN-HOUSE CAD/CAM OPERATIONAL (Have scanner &amp; milling facility)&quot;),
ISPICKVAL( Are_you__c , &quot;PARTIALLY CAD/CAM OUTSOURCING (Have scanner-sending milling work out)&quot; )),
( Primary_Scanner__c =&quot;&quot;))</errorConditionFormula>
    <errorDisplayField>Primary_Scanner__c</errorDisplayField>
    <errorMessage>Primary Scanner field should not be blank as you are using a Scanner.</errorMessage>
</ValidationRule>