force-app/main/default/objects/Dental_Lab_Qualifying_Questions__c/validationRules/Primary_Scanner_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Primary_Scanner_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL( Are_you__c , &quot;FULLY CAD/CAM OUTSOURCING (Sending scanning and milling work out)&quot;),
NOT(Primary_Scanner__c = &quot;&quot; ))</errorConditionFormula>
    <errorDisplayField>Primary_Scanner__c</errorDisplayField>
    <errorMessage>Primary Scanner field should be blank as you are not using a Scanner.</errorMessage>
</ValidationRule>